--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
+  },
+  "dependencies": {
+    "array-shuffle": "^1.0.1",
+    "d3": "^5.9.2"
   }
 }
