Add titanic data

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "array-shuffle": "^1.0.1",
-    "d3": "^5.9.2"
+    "d3": "^5.9.2",
+    "papaparse": "^5.0.0"
   }
 }
